PDF.js has had unintuitive behavior when selecting text where if the user starts their selection from far enough away from the text that they are beyond the boundary of the <span> element that contains the text, the selection will start at the top end of the page. This is because the selection ends up being anchored by the textLayer <div> which contains all of the text. This code prevents this behavior by detecting when a selection that is anchored by the textlayer <div> is being expanded to contain more text and collapses the selection to its end, thereby removing the textlayer div from the selection. To prevent the selection from flickering when we collapse it down, the code turns selections invisible when the current selection contains only the textlayer <div> and turns them visible again whenever the selection includes something else.

--- a/web/text_layer_builder.css
+++ b/web/text_layer_builder.css
@@ -123,3 +123,6 @@
     }
   }
 }
+.invisibleSelection ::selection {
+  background-color: transparent !important;
+}
